# plum

./: .gitignore  MANIFEST.in  README.md  plum.py  setup.py
plum/: __init__.py  __main__.py
plum/data/: config.json
plum/data/templates/cpp_cmake/: main.cpp
plum/data/templates/cpp_cmake_eclipse_conda_exe/: .cproject  .project  CMakeLists.txt  README.md  template.json
plum/data/templates/cpp_cmake_eclipse_conda_exe/conda-recipe/: meta.yaml
plum/data/templates/cpp_cmake_eclipse_conda_exe/src/: CMakeLists.txt  main.cpp
plum/data/templates/cpp_cmake_headeronly_eclipse_conda/: CMakeLists.txt  README.md  init_project.sh  template.json
plum/data/templates/cpp_cmake_headeronly_eclipse_conda/cmake/: project_nameConfig.cmake.in
plum/data/templates/cpp_cmake_headeronly_eclipse_conda/conda-recipe/: meta.yaml
plum/data/templates/cpp_cmake_headeronly_eclipse_conda/examples/: CMakeLists.txt  sumofpowers.cpp
plum/data/templates/cpp_cmake_headeronly_eclipse_conda/include/project_name/: project_name.hpp
plum/data/templates/cpp_cmake_headeronly_eclipse_conda/include/project_name/detail/: project_name_impl.hpp
plum/data/templates/cpp_cmake_headeronly_eclipse_conda/tests/: CMakeLists.txt  run_tests.cpp
plum/data/templates/python_standalone_app/: MANIFEST.in  README.md  init_project.sh  setup.py
plum/data/templates/python_standalone_app/project_name/: __main__.py
plum/templates/cpp_cmake_eclipse_conda_exe/: template.json
templates/cpp_cmake/: README.md
